
  * Fix GDB auto-load files. Closes: #1017913.
  * Add support for systemd-binfmt. Closes: #1012377.
  * Address privilege escalation via multiprocessing forkserver start method:
    - debian/patches/CVE-2022-42919.patch: don't use Linux abstract sockets
      in Lib/multiprocessing/connection.py.
    - CVE-2022-42919
  * libpython3.10-dev: Install Python.asdl and python.gram. Closes: #1022951.

 -- Matthias Klose <doko@debian.org>  Thu, 03 Nov 2022 12:21:44 +0100

python3.10 (3.10.8-1) unstable; urgency=medium

  * Python 3.10.8 release.

 -- Matthias Klose <doko@debian.org>  Mon, 24 Oct 2022 12:07:16 +0200

python3.10 (3.10.7-2) unstable; urgency=medium

  [ Stefano Rivera ]
  * autopkgtests: Support python3-setuptools >= 64, which does PEP-660
    editable installs.

 -- Matthias Klose <doko@debian.org>  Sat, 01 Oct 2022 06:31:04 +0200

python3.10 (3.10.7-1) unstable; urgency=medium

  * Python 3.10.7 release.

 -- Matthias Klose <doko@debian.org>  Thu, 08 Sep 2022 16:34:29 +0200

python3.10 (3.10.6-1) unstable; urgency=medium

  * Python 3.10.6 release.

  [ Leonidas Da Silva Barbosa ]
  * SECURITY UPDATE: Injection Attack
    - debian/patches/CVE-2015-20107.patch: Make mailcap refuse to match unsafe
      filenames/types/param in Lib/mailcap.py, Lib/test/test_mailcap.py.
    - CVE-2015-20107

 -- Matthias Klose <doko@debian.org>  Wed, 10 Aug 2022 13:19:32 +0200

python3.10 (3.10.5-1) unstable; urgency=medium

  * Python 3.10.5 release.
  * Update VCS attributes.

 -- Matthias Klose <doko@debian.org>  Wed, 08 Jun 2022 11:26:22 +0200

python3.10 (3.10.4-4) unstable; urgency=medium

  * Source-only upload.
  * Backport gh-78214: marshal: Stabilize FLAG_REF usage. Closes: #1010368.

 -- Matthias Klose <doko@debian.org>  Fri, 13 May 2022 14:08:11 +0200

python3.10 (3.10.4-3) unstable; urgency=medium

  * Build a python3.10-nopie package, diverting the python3.10
    executable.
  * Build the python3.10 interpreter with PIE enabled. Closes: ##919134.