@@ -7,6 +7,7 @@ python3.10 (3.10.8-2) UNRELEASED; urgency=medium
       in Lib/multiprocessing/connection.py.
     - CVE-2022-42919
   * libpython3.10-dev: Install Python.asdl and python.gram. Closes: #1022951.
+  * Configure the python3-dbg interpreter --with-valgrind. Closes: #1006315.
 
  -- Matthias Klose <doko@debian.org>  Thu, 03 Nov 2022 12:21:44 +0100
 
